# hw_27

./: db.sqlite3  pyproject.toml  pytests.ini
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_categories.py  0002_initial.py
hw_27/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ad_list_test.py  selection_create_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
