[tool.poetry]
name = "hw-27"
version = "0.1.0"
description = ""
authors = ["wooowno <sorrryks@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_27"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
psycopg2 = "^2.9.5"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
